--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.15.3"
+    "awilix-koa": "^11.0.0",
+    "koa": "^2.15.3",
+    "lodash": "^4.17.21",
+    "module-alias": "^2.2.3"
   },
   "devDependencies": {
-    "@types/koa": "^2.15.0"
+    "@types/koa": "^2.15.0",
+    "@types/lodash": "^4.17.13",
+    "@types/module-alias": "^2.0.4"
   }
 }
