--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^12.0.3",
     "awilix-koa": "^11.0.0",
     "koa": "^2.15.3",
+    "koa-router": "^13.0.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
+    "@types/koa-router": "^7.4.8",
     "@types/lodash": "^4.17.13",
     "@types/module-alias": "^2.0.4"
   }
